# Gconfig

./: Cargo.toml  README.md
src/: build.sh  config_file_location.json  config_file_location.txt  history.txt  log4rs.yaml  main.rs  openai_settings.toml  prompt1.txt  prompt_openai.txt_bkup  prompt_openai.txt_bkup_2  prompt_openai_03242024  prompt_openai_explicit_bkup.txt  test123.txt  test_something.ts
src/backup_config/: .bashrc  a_config.toml  alacritty.toml
src/log/: log4rs.yaml
src/prompt/: list_content_prompt.txt  prompt_openai.txt  prompt_openai_03292024
src/storage_config/: config_file_location.json  prompt1.txt  test.toml
