[package]
name = "mconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
axum = "0.7.2"
tokio = { version = "1.0.0", features = ["full"] }
tower = "0.4.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
indoc = "2.0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.20"
log4rs = "1.3.0"
clap = { version = "4.5.1", features = ["derive"] }
md5 = "0.7.0"
chrono = "0.4.34"
toml = "0.8.12"
